# CAG_CyberAntiquingGenerator

./: .gitignore  README.md  baojiang.py  pyproject.toml  requirements.txt
src/cyber_antiquing/: __init__.py  cli.py  generator.py  presets.py  strength.py  web.py
tests/: test_generator.py
